# sea-cpp-system

./: .gdbinit  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  Makefile  compilers.sh  setup.sh  setup_cpp.sh
makefiles/: debug-makefile  opt-makefile  prof-makefile
test/ufgm-test/: Makefile
test/ufgm-test/code/: constraints.h  fix_cppad.h  gm_src  main.cpp  objective.h
